<resources>
    <string name="app_name">layouts</string>
    <string name="robert_shelton">Robert Shelton</string>
    <string name="yellow_star">yellow star</string>
    <string name="biotextview">biotextview</string>
    <string name="hello">asld;fkjasl;kgjal;kjdl;kfjasdlfkjasldfj
    as;dlfkjasl;kjfl;kdjas;lkfjals;kjdflaks;jdfl;aksjdfl;aksjdf
    asd;fljkasl;dfkja;lskdjfal;skjdfl;aksjdl;kjasl;kdjfla;skjdfl;kaj
    asdfl;kasjd;flkjasl;kfj;alsdkjflkasjdfl;kjasld;fkjals;kjdfl;jkasdf\a\
    asd;lfkjasdlk;fjal;skjfalsk;jfdl;aksjdfl;kajsflk;asldkfals;kdjfl;akjsfd;
        as;ldkfja;lksjfdlk;asdfjals;kjfjggmmfmfmfmmfhellomeif tou read thiasld;fkjasl;kgjal;kjdl;kfjasdlfkjasldfj
    as;dlfkjasl;kjfl;kdjas;lkfjals;kjdflaks;jdfl;aksjdfl;aksjdf
    asd;fljkasl;dfkja;lskdjfal;skjdfl;aksjdl;kjasl;kdjfla;skjdfl;kaj
    asdfl;kasjd;flkjasl;kfj;alsdkjflkasjdfl;kjasld;fkjals;kjdfl;jkasdf\a\
    asd;lfkjasdlk;fjal;skjfalsk;jfdl;aksjdfl;kajsflk;asldkfals;kdjfl;akjsfd;
        as;ldkfja;lksjfdlk;asdfjals;kjfjggmmfmfmfmmfhellomeif tou read thiasld;fkjasl;kgjal;kjdl;kfjasdlfkjasldfj
    as;dlfkjasl;kjfl;kdjas;lkfjals;kjdflaks;jdfl;aksjdfl;aksjdf
    asd;fljkasl;dfkja;lskdjfal;skjdfl;aksjdl;kjasl;kdjfla;skjdfl;kaj
    asdfl;kasjd;flkjasl;kfj;alsdkjflkasjdfl;kjasld;fkjals;kjdfl;jkasdf\a\
    asd;lfkjasdlk;fjal;skjfalsk;jfdl;aksjdfl;kajsflk;asldkfals;kdjfl;akjsfd;
        as;ldkfja;lksjfdlk;asdfjals;kjfjggmmfmfmfmmfhellomeif tou read thiasld;fkjasl;kgjal;kjdl;kfjasdlfkjasldfj
    as;dlfkjasl;kjfl;kdjas;lkfjals;kjdflaks;jdfl;aksjdfl;aksjdf
    asd;fljkasl;dfkja;lskdjfal;skjdfl;aksjdl;kjasl;kdjfla;skjdfl;kaj
    asdfl;kasjd;flkjasl;kfj;alsdkjflkasjdfl;kjasld;fkjals;kjdfl;jkasdf\a\
    asd;lfkjasdlk;fjal;skjfalsk;jfdl;aksjdfl;kajsflk;asldkfals;kdjfl;akjsfd;
        as;ldkfja;lksjfdlk;asdfjals;kjfjggmmfmfmfmmfhellomeif tou read thiasld;fkjasl;kgjal;kjdl;kfjasdlfkjasldfj
    as;dlfkjasl;kjfl;kdjas;lkfjals;kjdflaks;jdfl;aksjdfl;aksjdf
    asd;fljkasl;dfkja;lskdjfal;skjdfl;aksjdl;kjasl;kdjfla;skjdfl;kaj
    asdfl;kasjd;flkjasl;kfj;alsdkjflkasjdfl;kjasld;fkjals;kjdfl;jkasdf\a\
    asd;lfkjasdlk;fjal;skjfalsk;jfdl;aksjdfl;kajsflk;asldkfals;kdjfl;akjsfd;
        as;ldkfja;lksjfdlk;asdfjals;kjfjggmmfmfmfmmfhellomeif tou read thiasld;fkjasl;kgjal;kjdl;kfjasdlfkjasldfj
    as;dlfkjasl;kjfl;kdjas;lkfjals;kjdflaks;jdfl;aksjdfl;aksjdf
    asd;fljkasl;dfkja;lskdjfal;skjdfl;aksjdl;kjasl;kdjfla;skjdfl;kaj
    asdfl;kasjd;flkjasl;kfj;alsdkjflkasjdfl;kjasld;fkjals;kjdfl;jkasdf\a\
    asd;lfkjasdlk;fjal;skjfalsk;jfdl;aksjdfl;kajsflk;asldkfals;kdjfl;akjsfd;
        as;ldkfja;lksjfdlk;asdfjals;kjfjggmmfmfmfmmfhellomeif tou read thiasld;fkjasl;kgjal;kjdl;kfjasdlfkjasldfj
    as;dlfkjasl;kjfl;kdjas;lkfjals;kjdflaks;jdfl;aksjdfl;aksjdf
    asd;fljkasl;dfkja;lskdjfal;skjdfl;aksjdl;kjasl;kdjfla;skjdfl;kaj
    asdfl;kasjd;flkjasl;kfj;alsdkjflkasjdfl;kjasld;fkjals;kjdfl;jkasdf\a\
    asd;lfkjasdlk;fjal;skjfalsk;jfdl;aksjdfl;kajsflk;asldkfals;kdjfl;akjsfd;
        as;ldkfja;lksjfdlk;asdfjals;kjfjggmmfmfmfmmfhellomeif tou read thiasld;fkjasl;kgjal;kjdl;kfjasdlfkjasldfj
    as;dlfkjasl;kjfl;kdjas;lkfjals;kjdflaks;jdfl;aksjdfl;aksjdf
    asd;fljkasl;dfkja;lskdjfal;skjdfl;aksjdl;kjasl;kdjfla;skjdfl;kaj
    asdfl;kasjd;flkjasl;kfj;alsdkjflkasjdfl;kjasld;fkjals;kjdfl;jkasdf\a\
    asd;lfkjasdlk;fjal;skjfalsk;jfdl;aksjdfl;kajsflk;asldkfals;kdjfl;akjsfd;
        as;ldkfja;lksjfdlk;asdfjals;kjfjggmmfmfmfmmfhellomeif tou read thiasld;fkjasl;kgjal;kjdl;kfjasdlfkjasldfj
    as;dlfkjasl;kjfl;kdjas;lkfjals;kjdflaks;jdfl;aksjdfl;aksjdf
    asd;fljkasl;dfkja;lskdjfal;skjdfl;aksjdl;kjasl;kdjfla;skjdfl;kaj
    asdfl;kasjd;flkjasl;kfj;alsdkjflkasjdfl;kjasld;fkjals;kjdfl;jkasdf\a\
    asd;lfkjasdlk;fjal;skjfalsk;jfdl;aksjdfl;kajsflk;asldkfals;kdjfl;akjsfd;
        as;ldkfja;lksjfdlk;asdfjals;kjfjggmmfmfmfmmfhellomeif tou read thiasld;fkjasl;kgjal;kjdl;kfjasdlfkjasldfj
    as;dlfkjasl;kjfl;kdjas;lkfjals;kjdflaks;jdfl;aksjdfl;aksjdf
    asd;fljkasl;dfkja;lskdjfal;skjdfl;aksjdl;kjasl;kdjfla;skjdfl;kaj
    asdfl;kasjd;flkjasl;kfj;alsdkjflkasjdfl;kjasld;fkjals;kjdfl;jkasdf\a\
    asd;lfkjasdlk;fjal;skjfalsk;jfdl;aksjdfl;kajsflk;asldkfals;kdjfl;akjsfd;
        as;ldkfja;lksjfdlk;asdfjals;kjfjggmmfmfmfmmfhellomeif tou read thiasld;fkjasl;kgjal;kjdl;kfjasdlfkjasldfj
    as;dlfkjasl;kjfl;kdjas;lkfjals;kjdflaks;jdfl;aksjdfl;aksjdf
    asd;fljkasl;dfkja;lskdjfal;skjdfl;aksjdl;kjasl;kdjfla;skjdfl;kaj
    asdfl;kasjd;flkjasl;kfj;alsdkjflkasjdfl;kjasld;fkjals;kjdfl;jkasdf\a\
    asd;lfkjasdlk;fjal;skjfalsk;jfdl;aksjdfl;kajsflk;asldkfals;kdjfl;akjsfd;
        as;ldkfja;lksjfdlk;asdfjals;kjfjggmmfmfmfmmfhellomeif tou read thiasld;fkjasl;kgjal;kjdl;kfjasdlfkjasldfj
    as;dlfkjasl;kjfl;kdjas;lkfjals;kjdflaks;jdfl;aksjdfl;aksjdf
    asd;fljkasl;dfkja;lskdjfal;skjdfl;aksjdl;kjasl;kdjfla;skjdfl;kaj
    asdfl;kasjd;flkjasl;kfj;alsdkjflkasjdfl;kjasld;fkjals;kjdfl;jkasdf\a\
    asd;lfkjasdlk;fjal;skjfalsk;jfdl;aksjdfl;kajsflk;asldkfals;kdjfl;akjsfd;
        as;ldkfja;lksjfdlk;asdfjals;kjfjggmmfmfmfmmfhellomeif tou read thiasld;fkjasl;kgjal;kjdl;kfjasdlfkjasldfj
    as;dlfkjasl;kjfl;kdjas;lkfjals;kjdflaks;jdfl;aksjdfl;aksjdf
    asd;fljkasl;dfkja;lskdjfal;skjdfl;aksjdl;kjasl;kdjfla;skjdfl;kaj
    asdfl;kasjd;flkjasl;kfj;alsdkjflkasjdfl;kjasld;fkjals;kjdfl;jkasdf\a\
    asd;lfkjasdlk;fjal;skjfalsk;jfdl;aksjdfl;kajsflk;asldkfals;kdjfl;akjsfd;
        as;ldkfja;lksjfdlk;asdfjals;kjfjggmmfmfmfmmfhellomeif tou read thiasld;fkjasl;kgjal;kjdl;kfjasdlfkjasldfj
    as;dlfkjasl;kjfl;kdjas;lkfjals;kjdflaks;jdfl;aksjdfl;aksjdf
    asd;fljkasl;dfkja;lskdjfal;skjdfl;aksjdl;kjasl;kdjfla;skjdfl;kaj
    asdfl;kasjd;flkjasl;kfj;alsdkjflkasjdfl;kjasld;fkjals;kjdfl;jkasdf\a\
    asd;lfkjasdlk;fjal;skjfalsk;jfdl;aksjdfl;kajsflk;asldkfals;kdjfl;akjsfd;
        as;ldkfja;lksjfdlk;asdfjals;kjfjggmmfmfmfmmfhellomeif tou read thi </string>
    <string name="nickname_pls">nickname pls</string>
    <string name="done">done</string>
</resources>