<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="clip_vertical"
        android:id="@+id/main"
        tools:context=".MainActivity">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/robert_shelton"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toTopOf="parent"
            style="@style/text_style" />

        <EditText
            android:id="@+id/nicnamedit"
            style="@style/text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nickname_pls"
            android:inputType="text|textPersonName"
            android:textAlignment="center" />

        <Button
            android:id="@+id/doneButton"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/done" />

        <TextView
            android:id="@+id/seenickname_text"
            style="@style/text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/star"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/yellow_star"
            android:layout_marginTop="10sp"
            app:srcCompat="@android:drawable/btn_star_big_on" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="30sp"
            android:id="@+id/bioscroll">


            <TextView
                android:id="@+id/biotext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15sp"
                style="@style/text_style"
                android:lineSpacingMultiplier="1.3"
                android:text="@string/hello" />
        </ScrollView>

    </LinearLayout>
</layout>